--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  bloc: ^8.1.4
   hive: ^2.2.3
+  uuid: ^4.4.0
+  get_it: ^7.7.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.5
   google_fonts: ^6.2.1
   hive_flutter: ^1.1.0
   cupertino_icons: ^1.0.6
   flutter_animate: ^4.5.0
+  two_dimensional_scrollables: ^0.3.0
 
 dev_dependencies:
   flutter_test:
