--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   bloc: ^8.1.4
   hive: ^2.2.3
   uuid: ^4.4.0
+  intl: ^0.19.0
   get_it: ^7.7.0
   equatable: ^2.0.5
   flutter_bloc: ^8.1.5
