--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,21 @@ dependencies:
   bloc: ^8.1.4
   hive: ^2.2.3
   uuid: ^4.4.0
+  excel: ^4.0.3
   intl: ^0.19.0
   get_it: ^7.7.0
   equatable: ^2.0.5
+  file_picker: ^8.0.3
   flutter_bloc: ^8.1.5
   google_fonts: ^6.2.1
   hive_flutter: ^1.1.0
+  path_provider: ^2.1.3
+  firebase_core: ^2.32.0
   cupertino_icons: ^1.0.6
   flutter_animate: ^4.5.0
+  downloadsfolder: ^1.1.0
+  cloud_firestore: ^4.17.5
+  permission_handler: ^11.3.1
   two_dimensional_scrollables: ^0.3.0
 
 dev_dependencies:
