--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
-        android:label="csspt_app"
+        android:label="CSPT Survey"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
