--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,16 +41,19 @@ dependencies:
   intl: ^0.19.0
   get_it: ^7.7.0
   equatable: ^2.0.5
-  file_picker: ^8.0.3
+  open_file: ^3.3.2
+  #  share_plus: ^9.0.0
   flutter_bloc: ^8.1.5
   google_fonts: ^6.2.1
+  fluttertoast: ^8.2.5
   hive_flutter: ^1.1.0
   path_provider: ^2.1.3
   firebase_core: ^2.32.0
   cupertino_icons: ^1.0.6
+  #  downloadsfolder: ^1.1.0
   flutter_animate: ^4.5.0
-  downloadsfolder: ^1.1.0
   cloud_firestore: ^4.17.5
+  connectivity_plus: ^6.0.3
   permission_handler: ^11.3.1
   two_dimensional_scrollables: ^0.3.0
 
@@ -63,9 +66,15 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  build_runner: ^2.4.10
   flutter_lints: ^3.0.0
   hive_generator: ^2.0.1
-  build_runner: ^2.4.10
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/cspt_logo.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -80,7 +89,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - asserts/cspt_logo.png
+    - assets/cspt_logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
