--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,16 +41,13 @@ dependencies:
   intl: ^0.19.0
   get_it: ^7.7.0
   equatable: ^2.0.5
-#  open_file: ^3.3.2
-#  share_plus: ^9.0.0
   flutter_bloc: ^8.1.5
   google_fonts: ^6.2.1
   fluttertoast: ^8.2.5
   hive_flutter: ^1.1.0
-  path_provider: ^2.1.3
   firebase_core: ^2.32.0
   cupertino_icons: ^1.0.6
-#  downloadsfolder: ^1.1.0
+  downloadsfolder: ^1.1.0
   flutter_animate: ^4.5.0
   cloud_firestore: ^4.17.5
   connectivity_plus: ^6.0.3
